--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,5 +1,4 @@
 .custom-button {
-  min-width: 165px;
   width: auto;
   height: 50px;
   letter-spacing: 0.5px;
@@ -15,6 +14,7 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 
   &:hover {
     background-color: white;
